--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
@@ -12,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.9",
+    "nodemon": "^3.0.2",
+    "otp-generator": "^4.0.1"
   }
 }
