--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.4"
   }
 }
