--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "build": "^0.1.4",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
