--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,7 +11,8 @@
         "src": "/(.*)",
         "destination": "/"
         }
-    ]
+    ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
  
 
 }
