--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,11 @@
+
+
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "destination": "/"
-        }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
- 
+  "version": 2,
+
+  "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }]
+
 
 }
+
 
