--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
