--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.2",
     "otp-generator": "^4.0.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "zod": "^3.22.4"
   }
 }
