--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.1",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "build": "^0.1.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
+    "lucide-react": "^0.429.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
@@ -27,6 +31,8 @@
     "react-toastify": "^10.0.4",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
