--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "build": "^0.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "concurrently": "^8.2.2",
     "lucide-react": "^0.429.0",
     "react": "^18.2.0",
