--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.2",
