--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "build": "^0.1.4",
@@ -19,6 +20,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^8.2.2",
+    "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.429.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
